--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fittest_v0",
+  "name": "webpack_scaffold",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,7 +14,5 @@
     "webpack": "^4.33.0",
     "webpack-command": "^0.4.2"
   },
-  "dependencies": {
-    "paper": "^0.12.0"
-  }
+  "dependencies": {}
 }
